- Auto-grow in-place editor in generic wxListCtrl again (taler21, #24293).
- Center labels in generic wxListCtrl correctly again (taler21, #24292).
- Fix label display after editing it in generic wxListCtrl (taler21, #24311).
- Improve multiple selection UI in generic wxListCtrl (taler21, #24332).
- Fix item deselection in multi-selection generic wxListCtrl (taler21, #24312).

wxGTK:

- Fix alpha in bitmaps created from SVG (Tim Eliseo, #24064).
- Improve desktop environment detection, notably under Wayland (#24050).
- Fix wxSystemSettings::GetMetric() scrollbar width calculation for GTK3 (#24057).
- Minimal wxVideoMode support for Wayland (#24021).
- Fix wxCheckBox::SetValue() when in undetermined state (#24074).
- Fix for incorrect preferred size from empty wxChoice with GTK3 (#23382).
- wxDropSource::GiveFeedback() fixes (#24051).
- Fix wxCheckBox undetermined state showing as checked with some themes (#24074).
- Fix crash with GTK3 if console program is using a GUI wxApp class (#24081).
- Generic wxDataViewCtrl drag hint fixes (#24084).
- Ensure wxListBox best size is at least the minimum required by GTK3.
- Support setting thickness when creating wxGauge with GTK >= 3.20 (#24107).

wxMSW:

- Add support for line spacing and bullet style attributes to wxTextCtrl
  (Blake-Madden, #24046, #24069).
- Fix possible crash in wxFileSystemWatcher (Rick van der Sluijs, #24119).
- Fix restoring hidden top level windows (Christian Walther, #24117).
- Add support for VT_UI8 OLE VARIANT type (Miguel Gimenez, #24115).
- Fix using "Alt" when wxGrid has focus (Dietmar Schwertberger, #24247).
- Fix wxButton::GetDefaultSize() in high DPI under MSW (#24283).
- Improve native MSW dialog DPI awareness (Maarten Bent, #24196).

wxOSX:

- Fix clipping when using Sonoma/Xcode 15 SDK (#23916, #24054, #24067, #24073).
- Restore activation for non-bundled applications (#24056, #24062).
- Fix wrong tooltips for cells with custom renderers in wxDataViewCtrl (#24370).

wxQt:
