@@ -273,6 +273,7 @@ All (GUI):
 - Fix label display after editing it in generic wxListCtrl (taler21, #24311).
 - Improve multiple selection UI in generic wxListCtrl (taler21, #24332).
 - Fix item deselection in multi-selection generic wxListCtrl (taler21, #24312).
+- Reduce flicker when closing wxAuiNotebook tab (Eran Ifrah, #24372).
 
 wxGTK:
 
